--- a/Home.html
+++ b/Home.html
@@ -72,7 +72,7 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a href="#" class="navbar-brand">
-            <img class="LogoNav" src="logo.png" alt="BrandLogo">
+            <img class="LogoNav" src='/img/logo.png' alt="BrandLogo">
           </a>
         </li>
       </ul>
