--- a/Home.html
+++ b/Home.html
@@ -107,7 +107,7 @@
           <i id="pwdIcon" class="fa fa-lock"></i>
           <input id="signInInput" type="password" class="pwd" placeholder="Enter Password"></input>
           <br><br>
-          <button type="button" class="btn btn-secondary" href="DashBoard.html">Sign In</button>
+          <button type="button" class="btn btn-secondary">Sign In</button>
 
         </div>
         <div class="modal-footer">
