--- a/Home.html
+++ b/Home.html
@@ -69,22 +69,35 @@
         font-size: 70px;
         padding-bottom: 20px;
       }
+      .pic1
+      {
+        height: 300px;
+        margin-left: 35%;
+        margin-top: 50px;
+      }
     </style>
-    <title>Home Demo</title>
+	  
+    <title>Home</title>
   </head>
+	
+	
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a href="#" class="navbar-brand">
+          <a href="Home.html" class="navbar-brand">
             <img class="LogoNav" src='/img/logo.png' alt="BrandLogo">
           </a>
         </li>
       </ul>
       <div class="navbar-nav ml-auto">
         <ul class="navbar-nav">
+	  <!--about us page-->
+	  <li class="nav-item active">
+            <a href="aboutus.html" class="btn signin btn-secondary">About Us</a>
+          </li>
           <li class="nav-item active">
-            <!---button for sign in-->
+            <!--button for sign in-->
             <button type="button" class="btn signin btn-secondary" data-toggle="modal" data-target="#login">sign in </button>
           </li>
           <li>
@@ -95,7 +108,7 @@
       </div>
   </nav>
 
-  <!--sign in modal ****Add forgot password?-->
+  <!--sign in modal -->
   <div class="modal fade text-center" id="login">
     <div class="modal-dialog modal-login">
       <div class="modal-content">
@@ -133,7 +146,7 @@
     </form>
   -->
 
-  <!--Sign up Choice-->
+  <!--Sign up Choice: Teacher or Student-->
   <div class="modal fade text-center" id="signup">
     <div class="modal-dialog modal-login">
       <div class="modal-content">
@@ -159,8 +172,7 @@
     </div>
   </div>
 
-  <!--Teacher&Student sign up modal
-    ***NEED TO BE FIX***         -->
+  <!--Teacher sign up modal-->
   <div class="modal fade text-center" id="Signup">
     <div class="modal-dialog modal-login">
       <div class="modal-content">
@@ -189,7 +201,7 @@
             <input class="form-control" type="password" id="signupConfirmpass" placeholder="confirm password"></input>
           </div>
           <div class="form-group">
-             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="aboutus.html">Privacy Policy</a></label>
           </div>
           <button type="button" id="justworkpls" class="btn btn-secondary"  >Sign Up</button>
         </div>
@@ -198,6 +210,56 @@
       </div>
     </div>
   </div>
+
+  <!--Student sign up modal-->
+  <div class="modal fade text-center" id="StudentSignup">
+    <div class="modal-dialog modal-login">
+      <div class="modal-content">
+        <div class="modal-header ">
+          <div class="modal-title text-center w-100">Student Sign Up</div>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="row">
+              <div class="col-6">
+                <input class="form-control" type="text" placeholder="Name"></input>
+              </div>
+              <div class="col-6">
+                <input class="form-control" type="text" placeholder="Last Name"></input>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="email" placeholder="Email"></input>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="password"></input>
+          </div>
+          <div class="form-group">
+            <input id="confPwd" class="form-control" type="password" placeholder="confirm password"></input>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group">
+                <input id="classCode" class="form-control" type="text" placeholder="code"></input>
+              </div>
+            </div>
+          </div>  
+          <div class="form-group">
+             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="aboutus.html">Privacy Policy</a></label>
+          </div>
+          <button type="submit" class="btn btn-secondary">Sign Up</button>
+        </div>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+<!--Home page content-->
+  <img class="pic1" alt="stockandtrade"src="financ.png">
+  <h5 class="text-center">Stock 101, Stock market crash course design for everyone</h5>
+
 
 
   
