--- a/Home.html
+++ b/Home.html
@@ -257,7 +257,7 @@
     </div>
   </div>
 <!--Home page content-->
-  <img class="pic1" alt="stockandtrade"src="financ">
+  <img class="pic1" alt="stockandtrade"src="/img/financ.png">
   <h5 class="text-center">Stock 101, Stock market crash course design for everyone</h5>
 
 
