--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
       }
 
     </style>
-    <title>Home Demo</title>
+    <title>About Us</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
