--- a/aboutus.html
+++ b/aboutus.html
@@ -77,7 +77,7 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a href="Home.html" class="navbar-brand">
-            <img class="LogoNav" src="logo.png" alt="BrandLogo">
+            <img class="LogoNav" src="/img/logo.png" alt="BrandLogo">
           </a>
         </li>
       </ul>
