--- a/WhatsStock.html
+++ b/WhatsStock.html
@@ -19,17 +19,40 @@
         height: 60px;
         width: 70px;
       }
-
+      .quizButton
+      {
+        width: 100px;
+        height: 50px;
+        padding:10px;
+        margin-left: 50%;
+        margin-top: 30px;
+      }
+      h5, ul
+      {
+        margin-left:20%;
+      }
+      .lessonOne
+      {
+        margin-left: 20%;
+        margin-right: 20%;
+      }
+      .stockpic
+      {
+        height: 200px;
+        margin-left: 30%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
 
 
     </style>
 
-    <title>modules</title>
+    <title>Lesson 1</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img class="LogoNav" src="logo.png" alt="BrandLogo"></a> <!--put brand logo here-->
+      <a class="navbar-brand" href="#"><img class="LogoNav" src="/img/logo.png" alt="BrandLogo"></a> <!--put brand logo here-->
       <ul class="navbar-nav ml-auto">
 
         <!--dropdown menu for profile-->
@@ -44,12 +67,28 @@
           </div>
         </li>
     </nav>
-    <a href="DashBoard.html">back </a>
+    <a href="StudentDash.html">back </a>
 
     <h2 class="text-center">What is Stock??</h2>
 
 
+    <div class="lessonOne">
+    <img src="/img/lesson1.png" alt="stock" class="stockpic">
+    <p>Stock is security that represents the ownership of a fraction of a corporation.
 
+The term "security" refers to a fungible, negotiable financial instrument that holds some type of monetary value.
+
+This entitles the owner of the stock to a proportion of the corporation's assets and profits equal to how much stock they own. Units of stock are called "shares."
+
+Investors can buy and sell, privately or publicly, corporate assets predominately through a stock exchange system while conforming to government regulations. These regulations are to protect investors from fraudulent practices.
+</p>
+    <p>
+    The stock market is made up of exchanges, like the New York Stock Exchange and the Nasdaq. Stocks are listed on a specific exchange, which brings buyers and sellers together and acts as a market for the shares of those stocks.
+    The exchange tracks the supply and demand — and directly related, the price — of each stock.
+    </p>
+    </div>
+
+    <a class="btn btn-secondary quizButton" href="quizOne.html">Quiz</a>
 
 
 
