--- a/quizOne.html
+++ b/quizOne.html
@@ -58,7 +58,7 @@
 
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img class="LogoNav" src="logo.png" alt="BrandLogo"></a> <!--put brand logo here-->
+      <a class="navbar-brand" href="#"><img class="LogoNav" src="/img/logo.png" alt="BrandLogo"></a> <!--put brand logo here-->
       <ul class="navbar-nav ml-auto">
 
         <!--dropdown menu for profile-->
