Minor text tweeks in aboutus.html and Home.html

--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
 
@@ -258,7 +258,7 @@
   </div>
 <!--Home page content-->
   <img class="pic1" alt="stockandtrade"src="/img/financ.png">
-  <h5 class="text-center">Stock 101, Stock market crash course design for everyone</h5>
+  <h5 class="text-center">Stock 101, A crash course designed for everyone!</h5>
 
 
 
