--- a/aboutus.html
+++ b/aboutus.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -251,7 +251,7 @@
       <p>We DO NOT sell, trade or share for marketing purposes your personal information with third parties without your consent. In general,
       the personal information you provide to us is used to help us communicate with you.
       </p>
-      <li class="font-weight-bold">How we protected information</li>
+      <li class="font-weight-bold">How we protect information</li>
       <p>We implement security measures designed to protect your information from unauthorized access. Your account is protected by account password and we urge you to take steps to keep your personal information safe by not disclosing your password and by logging out of your account after each use. We further protect your information from potential security breached by implementing certain technological security measures includeing encryption, firewalls and secure socket layer technology. However, these measurement do not guarantee that your information will not be accessed, disclosed, altered or destroyed by breaches. By using our website, you acknowledge that you understand and agree to assume these risks.
       </p>
       <li class="font-weight-bold">Change to our privacy policy</li>
