--- a/Home.html
+++ b/Home.html
@@ -180,12 +180,12 @@
           <div class="modal-title text-center w-100">Sign Up</div>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <div class="form-group">
-            <form>
+        <form>
+            <div class="form-group">
                 <div class="row">
                     <div class="col-6">
                         <input class="form-control" type="text" id="signupName" placeholder="Name" required></input>
-                     </div>
+                    </div>
                     <div class="col-6">
                         <input class="form-control" type="text" id="signupLastName" placeholder="Last Name" required></input>
                     </div>
@@ -200,11 +200,11 @@
                     <input class="form-control" type="password" id="signupConfirmpass" placeholder="confirm password" required></input>
                 </div>
                 <div class="form-group form-check">
-                    <label class="form-check-label"><input type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
+                    <label class="form-check-label"><input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
                 </div>
-                <button type="button" id="justworkpls" class="btn btn-secondary" onclick="signup(signupName.value, signupLastName.value, signupEmail.value, signupPassword.value, signupConfirmpass.value)" value="submit">Sign Up</button>
-            </form>
-        </div>
+                <button type="submit" id="justworkpls" class="btn btn-secondary" onclick="signup(signupName.value, signupLastName.value, signupEmail.value, signupPassword.value, signupConfirmpass.value)">Sign Up</button>
+            </div>
+        </form>
       </div>
       <div class="modal-footer">
       </div>
