Working with submit button

--- a/Home.html
+++ b/Home.html
@@ -203,7 +203,7 @@
                     <div class="form-group form-check">
                         <label class="form-check-label"><input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
                     </div>
-                    <button type="submit" id="justworkpls" class="btn btn-secondary" onclick="signup(signupName.value, signupLastName.value, signupEmail.value, signupPassword.value, signupConfirmpass.value)">Sign Up</button>
+                    <button type="submit" id="justworkpls" class="btn btn-secondary" data-target="signup(signupName.value, signupLastName.value, signupEmail.value, signupPassword.value, signupConfirmpass.value)">Sign Up</button>
                 </div>
             </form>
         </div>
