Testing if the signup.php file will call the signup function

--- a/Home.html
+++ b/Home.html
@@ -181,27 +181,27 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form method="post" action="<?php echo htmlspecialchars(Signup.php);?>" target="_self">
+            <form method="post" action="<?php echo htmlspecialchars(Signup.php);?>">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
                             <input class="form-control" type="text" id="signupName" placeholder="Name" required></input>
                         </div>
                         <div class="col-6">
-                            <input class="form-control" type="text" id="signupLastName" placeholder="Last Name" ></input>
+                            <input class="form-control" type="text" id="signupLastName" placeholder="Last Name" required></input>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="email" id="signupEmail" placeholder="Email" ></input>
+                        <input class="form-control" type="email" id="signupEmail" placeholder="Email" required></input>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="signupPassword" placeholder="password" ></input>
+                        <input class="form-control" type="password" id="signupPassword" placeholder="password" required></input>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="signupConfirmpass" placeholder="confirm password" ></input>
+                        <input class="form-control" type="password" id="signupConfirmpass" placeholder="confirm password" required></input>
                     </div>
                     <div class="form-group form-check">
-                        <label class="form-check-label"><input class="form-check-input" type="checkbox" > I accept the <a href="aboutus.html">Privacy Policy</a></label>
+                        <label class="form-check-label"><input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
                     </div>
                     <button type="submit" id="justworkpls" class="btn btn-secondary">Sign Up</button>
                 </div>
