--- a/Home.html
+++ b/Home.html
@@ -181,7 +181,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form method="post" action="/Stock101Project/Signup.php">
+            <form method="post" action="/Signup.php">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
