Simple format correction and last php file test

--- a/Home.html
+++ b/Home.html
@@ -134,8 +134,6 @@
           </div>
           </form>
         </div>
-        </fieldset>
-        </form>
         <div class="modal-footer">
 
         </div>
@@ -264,7 +262,7 @@
   </div>
 <!--Home page content-->
   <img class="pic1" alt="stockandtrade"src="/img/financ.png">
-  <h5 class="text-center">Stock 101, A crash course designed for everyone!</h5>
+  <h5 class="text-center" style="text-align:center">Stock 101, A crash course designed for everyone!</h5>
 
 
 
