--- a/Home.html
+++ b/Home.html
@@ -183,31 +183,60 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form method="post" action="/Signup.php">
+            <form method="post" class="needs-validation" novalidate>
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
                             <input class="form-control" type="text" id="signupName" placeholder="Name" required></input>
+                            <div class="valid-feedback">Valid.</div>
+                            <div class="invalid-feedback">Please fill out this field.</div>
                         </div>
                         <div class="col-6">
                             <input class="form-control" type="text" id="signupLastName" placeholder="Last Name" required></input>
+                            <div class="valid-feedback">Valid.</div>
+                            <div class="invalid-feedback">Please fill out this field.</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="email" id="signupEmail" placeholder="Email" required></input>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="password" id="signupPassword" placeholder="password" required></input>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="password" id="signupConfirmpass" placeholder="confirm password" required></input>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="form-group form-check">
                         <label class="form-check-label"><input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Check this box to continue.</div>
                     </div>
                     <button type="submit" id="justworkpls" class="btn btn-secondary">Sign Up</button>
                 </div>
             </form>
+            <script>
+                (function () {
+                    'use strict';
+                    window.addEventListener('load', function () {
+                        var forms = document.getElementsByClassName('needs-validation');
+                        var validation = array.prototype.filter.call(forms, function (form) {
+                            form.addEventListener('submit', function (event) {
+                                if (form.checkValidity() === false) {
+                                    event.preventDefault();
+                                    event.stopPropagation();
+                                }
+                                form.classList.add('was-validated');
+                            }, false);
+                        });
+                    }, false);
+                })();
+            </script>
         </div>
         </div>
       <div class="modal-footer">
@@ -262,7 +291,7 @@
   </div>
 <!--Home page content-->
   <img class="pic1" alt="stockandtrade"src="/img/financ.png">
-  <h5 class="text-center" style="text-align:center">Stock 101, A crash course designed for everyone!</h5>
+  <h5 class="text-center">Stock 101, A crash course designed for everyone!</h5>
 
 
 
