--- a/Home.html
+++ b/Home.html
@@ -213,9 +213,11 @@
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="form-group form-check">
-                        <label class="form-check-label"><input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
-                        <div class="valid-feedback">Valid.</div>
-                        <div class="invalid-feedback">Check this box to continue.</div>
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a>
+                            <div class="valid-feedback">Valid.</div>
+                            <div class="invalid-feedback">Check this box to continue.</div>
+                        </label>
                     </div>
                     <button type="submit" id="justworkpls" class="btn btn-secondary">Sign Up</button>
                 </div>
