--- a/Home.html
+++ b/Home.html
@@ -183,7 +183,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form action="/action_page.php" method="post" class="needs-validation" novalidate>
+            <form name="signupForm" action="/action_page.php" method="post" class="was-validated" onsubmit="return signup()">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
@@ -214,30 +214,14 @@
                     </div>
                     <div class="form-group form-check">
                         <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a></label>
+                            <input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a>
+                        </label>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Check this box to continue.</div>
                     </div>
-                    <button type="submit" id="justworkpls" class="btn btn-secondary">Sign Up</button>
+                    <button type="submit" class="btn btn-secondary">Sign Up</button>
                 </div>
             </form>
-            <script>
-                (function () {
-                    'use strict';
-                    window.addEventListener('load', function () {
-                        var forms = document.getElementsByClassName('needs-validation');
-                        var validation = Array.prototype.filter.call(forms, function (form) {
-                            form.addEventListener('submit', function (event) {
-                                if (form.checkValidity() === false) {
-                                    event.preventDefault();
-                                    event.stopPropagation();
-                                }
-                                form.classList.add('was-validated');
-                            }, false);
-                        });
-                    }, false);
-                })();
-            </script>
         </div>
         </div>
       <div class="modal-footer">
