--- a/Home.html
+++ b/Home.html
@@ -183,7 +183,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form name="signupForm" action="/action_page.php" method="post" class="was-validated" onsubmit="signup()">
+            <form name="signupForm" action="/action_page.php" method="post" class="was-validated">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
@@ -219,7 +219,7 @@
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Check this box to continue.</div>
                     </div>
-                    <button type="submit" class="btn btn-secondary">Sign Up</button>
+                    <button type="submit" class="btn btn-secondary" onclick="signup()">Sign Up</button>
                 </div>
             </form>
         </div>
