--- a/Home.html
+++ b/Home.html
@@ -183,7 +183,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form name="signupForm" action="/action_page.php" method="post" class="was-validated">
+            <form name="signupForm" method="post" class="was-validated">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-6">
