--- a/WhatsStockTeach.html
+++ b/WhatsStockTeach.html
@@ -73,7 +73,7 @@
     <h2 class="text-center">What is Stock??</h2>
 
     <div class="lessonOne">
-    <img src="lesson1.png" alt="stock" class="stockpic">
+    <img src="/img/lesson1.png" alt="stock" class="stockpic">
     <p>Stock is security that represents the ownership of a fraction of a corporation.
 
 The term "security" refers to a fungible, negotiable financial instrument that holds some type of monetary value.
