--- a/Home.html
+++ b/Home.html
@@ -129,7 +129,7 @@
           <i id="pwdIcon" class="fa fa-lock"></i>
           <input name="signInPass" type="password" class="pwd" placeholder="Enter Password"></input>
           <br><br>
-          <button type="submit" id="loginButton" onclick="myFunction(signInName.value,signInPass.value)" class="btn btn-secondary" >Sign In</button>
+          <button type="submit" id="loginButton" class="btn btn-secondary" >Sign In</button>
           
           </div>
           </form>
@@ -183,7 +183,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form method="post" action="/plswork" name="signupForm" onsubmit="return signup()" class="was-validated">
+            <form method="post" action="/plswork">
                 <div class="form-group">
                     <input class="form-control" type="text" name="signupName" placeholder="Username" required></input>
                     <div class="valid-feedback">Valid.</div>
@@ -205,9 +205,8 @@
                     </label>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Check this box to continue.</div>
-                    
-                    <button type="submit" id="signupButton" class="btn btn-secondary">Sign Up</button>
                 </div>
+                <button type="submit" id="signupButton" class="btn btn-secondary">Sign Up</button>
             </form>
         </div>
         </div>
@@ -234,14 +233,14 @@
                 </div>
                 <div class="form-group">
                     <input id="confPwd" class="form-control" type="password" placeholder="confirm password"></input>
-                    </div>
+                </div>
                 <div class="form-group">
                     <input id="classCode" name="bode" class="form-control" type="text" placeholder="code"></input>
                 </div>
                 <div class="form-group">
                     <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="aboutus.html">Privacy Policy</a></label>
-                    <button type="submit" class="btn btn-secondary">Sign Up</button>
                 </div>
+                <button type="submit" class="btn btn-secondary">Sign Up</button>
             </form>
         </div>
           <div class="modal-footer">
