Validation check test

--- a/Home.html
+++ b/Home.html
@@ -200,6 +200,11 @@
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="text" id="signupClassName" placeholder="class name" required></input>
+                    <div class="valid-feedback">Valid.</div>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                </div>
+                <div class="form-group">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" required> I accept the <a href="aboutus.html">Privacy Policy</a>
                     </label>
@@ -235,7 +240,7 @@
                     <input id="confPwd" class="form-control" type="password" placeholder="confirm password"></input>
                 </div>
                 <div class="form-group">
-                    <input id="classCode" name="bode" class="form-control" type="text" placeholder="code"></input>
+                    <input id="classCode" name="bode" class="form-control" type="text" placeholder="class code"></input>
                 </div>
                 <div class="form-group">
                     <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="aboutus.html">Privacy Policy</a></label>
