--- a/Home.html
+++ b/Home.html
@@ -183,7 +183,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-            <form method="post" action="/plswork">
+            <form method="post" action="/plswork" class="needs-validation" novalidate>
                 <div class="form-group">
                     <input class="form-control" type="text" name="signupName" placeholder="Username" required></input>
                     <div class="valid-feedback">Valid.</div>
