--- a/Home.html
+++ b/Home.html
@@ -190,14 +190,12 @@
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="signupPassword" placeholder="password" required></input>
-                    <div class="valid-feedback">Valid.</div>
-                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <input class="form-control" type="password" name="signupPassword" placeholder="password" onchange="validate()" required></input>
+                    
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="confirmPass" placeholder="confirm password" required></input>
-                    <div class="valid-feedback" id="validpass"></div>
-                    <div class="invalid-feedback" id="invalidpass"></div>
+                    <input class="form-control" type="password" name="confirmPass" placeholder="confirm password" onchange="validate()" required></input>
+                    <div id="validpass"></div>
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="text" id="signupClassName" placeholder="class name" required></input>
