--- a/Home.html
+++ b/Home.html
@@ -190,7 +190,7 @@
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="signupPassword" placeholder="password" required></input>
+                    <input class="form-control" type="password" name="signupPassword" placeholder="password" onchange="validate()" required></input>
                     
                 </div>
                 <div class="form-group">
