--- a/Home.html
+++ b/Home.html
@@ -190,11 +190,11 @@
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="signupPassword" placeholder="password" onchange="validate()" required></input>
+                    <input class="form-control" type="password" name="signupPassword" placeholder="password" onkeyup="validate()" required></input>
                     
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="confirmPass" placeholder="confirm password" onchange="validate()" required></input>
+                    <input class="form-control" type="password" name="confirmPass" placeholder="confirm password" onkeyup="validate()" required></input>
                     <div id="validpass"></div>
                 </div>
                 <div class="form-group">
@@ -209,7 +209,7 @@
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Check this box to continue.</div>
                 </div>
-                <button type="submit" id="signupButton" class="btn btn-secondary" data-toggle="modal" data-target="#Signup"  data-dismiss="modal">Sign Up</button>
+                <button type="submit" id="signupButton" class="btn btn-secondary">Sign Up</button>
             </form>
         </div>
         </div>
