css link correction

--- a/Home.html
+++ b/Home.html
@@ -72,7 +72,7 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/Stock101Project/public/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/Stock101Project/public/css/styles.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         .LogoNav {
